--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,31 +1,40 @@
 {
   "compilerOptions": {
     /* File Layout - Essential for professional structure */
-    "rootDir": "./src",                          
-    "outDir": "./dist",                         
-
+    "rootDir": "./src",
+    "outDir": "./dist",
     /* Environment Settings */
-    "target": "ESNext",                          // Modern JS output
-    "module": "NodeNext",                        // Mandatory for modern Node.js
-    "moduleResolution": "NodeNext",              
-    "lib": ["ESNext"],
-    "types": ["node"],                           // Explicitly include Node types
-
+    "target": "ESNext", // Modern JS output
+    "module": "NodeNext", // Mandatory for modern Node.js
+    "moduleResolution": "NodeNext",
+    "lib": [
+      "ESNext"
+    ],
+    "types": [
+      "node"
+    ], // Explicitly include Node types
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ], // Include custom types
     /* Interop & Security */
-    "esModuleInterop": true,                     // Fixes "module.exports" compatibility
-    "forceConsistentCasingInFileNames": true,     
-    "skipLibCheck": true,                        // Speeds up compilation
-
+    "esModuleInterop": true, // Fixes "module.exports" compatibility
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true, // Speeds up compilation
     /* Stricter Typechecking (Your original settings - Keep them!) */
-    "strict": true,                              // The "No-Cheating" mode
-    "noUncheckedIndexedAccess": true,            
+    "strict": true, // The "No-Cheating" mode
+    "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
-    "isolatedModules": true,                     // Ensures each file can be safely transpiled
-
+    "isolatedModules": true, // Ensures each file can be safely transpiled
     /* Metadata for Debugging */
-    "sourceMap": true,                           // Essential for debugging TS in production
-    "declaration": true                          // Generates .d.ts files for your API
+    "sourceMap": true, // Essential for debugging TS in production
+    "declaration": true // Generates .d.ts files for your API
   },
-  "include": ["src/**/*"],                       // Only compile what's in src
-  "exclude": ["node_modules", "dist"]            // Ignore these folders
+  "include": [
+    "src/**/*"
+  ], // Only compile what's in src
+  "exclude": [
+    "node_modules",
+    "dist"
+  ] // Ignore these folders
 }
