--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.3.0",
     "bcrypt": "^6.0.0",
+    "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
