--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "crypto": "^1.0.1",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.18.0",
+    "rate-limit-redis": "^4.3.1",
+    "redis": "^5.11.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
